[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["liznichols <liz.nichols@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
